--- a/src/main/templates/businessList.fxml
+++ b/src/main/templates/businessList.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="691.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.BusinessListController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="691.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.BusinessListController">
    <children>
       <VBox layoutX="242.0" layoutY="94.0" prefHeight="232.0" prefWidth="206.0">
          <children>
@@ -15,5 +15,10 @@
             <Button mnemonicParsing="false" prefHeight="58.0" prefWidth="224.0" text="Use Case 4: " />
          </children>
       </VBox>
+      <ScrollPane fx:id="scrollArea" layoutY="87.0" prefHeight="200.0" prefWidth="200.0">
+         <content>
+            <VBox fx:id="scrollBox" prefHeight="200.0" prefWidth="100.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
