--- a/src/main/templates/businessPage.fxml
+++ b/src/main/templates/businessPage.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -44,6 +46,13 @@
                   <Label fx:id="phoneLabel" layoutX="28.0" layoutY="31.0" text="BusinessPhone" visible="false" />
                </children>
             </AnchorPane>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="back" mnemonicParsing="false" onAction="#backToBusinessList" prefHeight="50.0" prefWidth="68.0" text="Back" />
+                  <Button fx:id="review" mnemonicParsing="false" onAction="#reviewBusiness" prefHeight="51.0" prefWidth="78.0" text="Review" />
+                  <Button fx:id="revList" mnemonicParsing="false" onAction="#goToList" prefHeight="51.0" prefWidth="115.0" text="Review List" />
+               </children>
+            </HBox>
          </children>
       </VBox>
    </children>
